# ckb-sentencizer

./: .gitignore  README.md  pyproject.toml
ckb_sentencizer/: __init__.py  ckb_sentencizer.py  constants.py
