[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ckb_sentencizer"
version = "0.0.0"
description = "An article to sentence tokenizer for Central Kurdish (Sorani)"
readme = "README.md"
authors = [
    { name = "Abdulbasit Zahir", email = "abdulbasit.zahir@outlook.com" },
]
